--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "inngest": "^3.35.0",
     "lucide-react": "^0.484.0",
+    "motion": "^12.23.24",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -39,6 +40,7 @@
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.2",
     "resend": "^4.4.0",
+    "simplex-noise": "^4.0.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
